<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:padding="25dp"
    android:orientation="vertical"
    style="@style/DataLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:fontFamily="@font/rubik_regular"
                android:lineSpacingExtra="2dp"
                android:text="@string/instruction_point_one"
                style="@style/ImportantTextColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:gravity="center"
                android:fontFamily="@font/rubik_medium"
                android:lineSpacingExtra="2dp"
                android:text="@string/important_instruction_message_one"
                style="@style/ImportantTextColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:fontFamily="@font/rubik_regular"
                android:lineSpacingExtra="2dp"
                android:text="@string/instruction_point_two"
                style="@style/ImportantTextColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:gravity="center"
                android:fontFamily="@font/rubik_medium"
                android:lineSpacingExtra="2dp"
                android:text="@string/important_instruction_message_two"
                style="@style/ImportantTextColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik_medium"
                android:lineSpacingExtra="2dp"
                android:text="@string/notes_point"
                style="@style/TextColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:textSize="22sp"
                android:lineSpacingExtra="4dp"
                android:text="@string/notes_description"
                style="@style/TextColor"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/billboard"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:fontFamily="@font/rubik_medium"
                android:lineSpacingExtra="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/notes_point_two"
                style="@style/TextColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:textSize="22sp"
                android:lineSpacingExtra="4dp"
                android:text="@string/document_description"
                style="@style/TextColor"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/books"/>

            <ImageView
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                style="@style/Close"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>