<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    style="@style/RegisterLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:text="@string/registration"
            android:textSize="42sp"
            android:fontFamily="@font/raleway_bold"
            style="@style/TextColor"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="25dp"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/user_name"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:elevation="5dp"
            android:textSize="20sp"
            style="@style/MainMenuLayout"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="25dp"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:fontFamily="@font/rubik_regular"
            android:inputType="phone"
            android:padding="15dp"
            android:textSize="20sp"
            android:elevation="5dp"
            style="@style/MainMenuLayout"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="25dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="20sp"
            android:elevation="5dp"
            style="@style/MainMenuLayout"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="25dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textVisiblePassword"
            android:padding="15dp"
            android:textSize="20sp"
            android:elevation="5dp"
            style="@style/MainMenuLayout"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="100dp"
            android:paddingVertical="15dp"
            android:text="@string/registration"
            android:textSize="24sp"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:elevation="5dp"
            style="@style/PickerLayout"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:paddingHorizontal="25dp"
            android:layout_gravity="center_vertical"
            android:text="@string/login"
            android:textSize="24sp"
            android:fontFamily="@font/raleway_medium"
            android:elevation="5dp"
            style="@style/RegisterBackground"/>

    </LinearLayout>

</LinearLayout>