<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    style="@style/LogInBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="75dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="25dp"
            android:text="@string/registration"
            android:textSize="24sp"
            android:fontFamily="@font/raleway_medium"
            android:elevation="5dp"
            style="@style/InputLayout"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:text="@string/login"
                android:textSize="42sp"
                android:fontFamily="@font/raleway_bold"
                style="@style/TextColor"/>

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:gravity="end"
                android:text="@string/password_reset"
                android:textSize="20sp"
                android:fontFamily="@font/rubik_regular"
                style="@style/TextColor"/>

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="25dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:elevation="5dp"
            android:textSize="20sp"
            style="@style/MainMenuLayout"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="25dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:fontFamily="@font/rubik_regular"
            android:inputType="textVisiblePassword"
            android:padding="15dp"
            android:textSize="20sp"
            android:elevation="5dp"
            style="@style/MainMenuLayout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <View
                style="@style/LineColor"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                style="@style/TextColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/or"
                android:textSize="22sp" />

            <View
                style="@style/LineColor"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginEnd="50dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

        </LinearLayout>

        <ImageView
            android:id="@+id/google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/google"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="100dp"
            android:paddingVertical="15dp"
            android:text="@string/login"
            android:textSize="24sp"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:elevation="5dp"
            style="@style/PickerLayout"/>

    </LinearLayout>

</LinearLayout>